tests/endurance-test/y.output
Terminals unused in grammar

    INCREMENT
    DECREMENT
    COMMENTS
    '+'
    '-'
    '*'
    '/'


State 2 conflicts: 7 shift/reduce, 5 reduce/reduce
State 19 conflicts: 7 shift/reduce, 5 reduce/reduce
State 77 conflicts: 20 shift/reduce
State 103 conflicts: 7 shift/reduce, 5 reduce/reduce
State 147 conflicts: 7 shift/reduce, 5 reduce/reduce
State 158 conflicts: 20 shift/reduce
State 164 conflicts: 7 shift/reduce, 5 reduce/reduce
State 175 conflicts: 7 shift/reduce, 5 reduce/reduce
State 184 conflicts: 7 shift/reduce, 5 reduce/reduce
State 192 conflicts: 1 shift/reduce
State 214 conflicts: 7 shift/reduce, 5 reduce/reduce
State 237 conflicts: 7 shift/reduce, 5 reduce/reduce
State 240 conflicts: 7 shift/reduce, 5 reduce/reduce
State 244 conflicts: 7 shift/reduce, 5 reduce/reduce
State 247 conflicts: 7 shift/reduce, 5 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: stmts

    2 stmt: conditional
    3     | repetition
    4     | func
    5     | var
    6     | commands
    7     | expr SEMI_COLON

    8 $@1: %empty

    9 stmt: $@1 block

   10 block: BLOCK_OPEN stmts BLOCK_CLOSE

   11 conditional: IF OPEN_PAREN expr CLOSE_PAREN stmt
   12            | IF OPEN_PAREN expr CLOSE_PAREN stmt ELSE stmt
   13            | SWITCH OPEN_PAREN expr CLOSE_PAREN BLOCK_OPEN caselist BLOCK_CLOSE

   14 caselist: caselist CASE term COLON stmts
   15         | caselist DEFAULT COLON stmts
   16         | %empty

   17 repetition: WHILE OPEN_PAREN expr CLOSE_PAREN stmt
   18           | FOR OPEN_PAREN optexpr SEMI_COLON optexpr SEMI_COLON optexpr CLOSE_PAREN stmt
   19           | DO stmt WHILE OPEN_PAREN expr CLOSE_PAREN SEMI_COLON

   20 $@2: %empty

   21 var: type IDENTIFIER $@2 vector SEMI_COLON
   22    | type MUL pointer SEMI_COLON

   23 pointer: IDENTIFIER vector
   24        | MUL pointer

   25 funcid: IDENTIFIER
   26       | MAIN
   27       | PRINTF
   28       | SCANF
   29       | SLICE
   30       | SOME
   31       | REDUCE
   32       | FILTER
   33       | MAP
   34       | SORT
   35       | FREE

   36 $@3: %empty

   37 func: $@3 type funcid OPEN_PAREN opttypelist CLOSE_PAREN BLOCK_OPEN stmts BLOCK_CLOSE
   38     | type funcid OPEN_PAREN opttypelist CLOSE_PAREN SEMI_COLON

   39 $@4: %empty

   40 typelist: typelist COMMA type IDENTIFIER $@4 vector

   41 $@5: %empty

   42 typelist: type IDENTIFIER $@5 vector

   43 termlist: termlist COMMA term
   44         | term

   45 opttypelist: typelist
   46            | %empty

   47 opttermlist: termlist
   48            | %empty

   49 commands: RETURN optexpr SEMI_COLON
   50         | BREAK SEMI_COLON
   51         | CONTINUE SEMI_COLON

   52 $@6: %empty

   53 commands: TYPEDEF type IDENTIFIER $@6 vector SEMI_COLON
   54         | INCLUDE STRING
   55         | STRUCT IDENTIFIER BLOCK_OPEN varlist BLOCK_CLOSE SEMI_COLON
   56         | ENUM IDENTIFIER BLOCK_OPEN idlist BLOCK_CLOSE SEMI_COLON
   57         | UNION IDENTIFIER BLOCK_OPEN varlist BLOCK_CLOSE SEMI_COLON
   58         | GOTO IDENTIFIER COLON
   59         | IDENTIFIER COLON
   60         | SIZEOF OPEN_PAREN type CLOSE_PAREN SEMI_COLON
   61         | SIZEOF OPEN_PAREN IDENTIFIER CLOSE_PAREN SEMI_COLON

   62 varlist: varlist var
   63        | %empty

   64 idlist: IDENTIFIER COMMA idlist
   65       | IDENTIFIER

   66 optexpr: expr
   67        | %empty

   68 stmts: stmts stmt
   69      | %empty

   70 expr: attr assign expr
   71     | expr op term
   72     | expr rel term
   73     | expr cond term
   74     | LOGICAL_NOT expr
   75     | expr QUEST stmt COLON stmt
   76     | term
   77     | OPEN_PAREN expr CLOSE_PAREN

   78 assign: ASSIGN
   79       | ADD_ASSIGN
   80       | SUB_ASSIGN
   81       | MUL_ASSIGN
   82       | DIV_ASSIGN
   83       | MOD_ASSIGN
   84       | LEFT_SHIFT_ASSIGN
   85       | RIGHT_SHIFT_ASSIGN
   86       | BITWISE_AND_ASSIGN
   87       | BITWISE_OR_ASSIGN
   88       | BITWISE_XOR_ASSIGN

   89 op: ADD
   90   | SUB
   91   | MUL
   92   | DIV
   93   | MOD
   94   | BITWISE_AND
   95   | BITWISE_OR
   96   | BITWISE_NOT
   97   | LEFT_SHIFT
   98   | RIGHT_SHIFT
   99   | BITWISE_XOR

  100 rel: EQ
  101    | NE
  102    | LT
  103    | LE
  104    | GT
  105    | GE

  106 cond: LOGICAL_AND
  107     | LOGICAL_OR

  108 term: INTEGER
  109     | DECIMAL
  110     | STRING
  111     | boolean
  112     | funcid OPEN_PAREN opttermlist CLOSE_PAREN
  113     | attr

  114 attr: IDENTIFIER vector
  115     | IDENTIFIER vector DOT attr
  116     | IDENTIFIER vector POINTER attr

  117 boolean: TRUE
  118        | FALSE

  119 vector: vector OPEN_BRACKET expr CLOSE_BRACKET
  120       | %empty

  121 type: modifier INT
  122     | modifier CHAR
  123     | modifier FLOAT
  124     | modifier DOUBLE
  125     | modifier BOOL
  126     | STRUCT IDENTIFIER
  127     | ENUM IDENTIFIER

  128 modifier: UNSIGNED
  129         | SIGNED
  130         | SHORT
  131         | LONG
  132         | CONST
  133         | %empty


Terminals, with rules where they appear

    $end (0) 0
    '*' (42)
    '+' (43)
    '-' (45)
    '/' (47)
    error (256)
    UNSIGNED (258) 128
    SIGNED (259) 129
    SHORT (260) 130
    LONG (261) 131
    INCLUDE (262) 54
    MAIN (263) 26
    BREAK (264) 50
    CASE (265) 14
    CONST (266) 132
    CONTINUE (267) 51
    DEFAULT (268) 15
    IF (269) 11 12
    ELSE (270) 12
    ENUM (271) 56 127
    RETURN (272) 49
    STRUCT (273) 55 126
    INT (274) 121
    FLOAT (275) 123
    DOUBLE (276) 124
    BOOL (277) 125
    TRUE (278) 117
    FALSE (279) 118
    CHAR (280) 122
    DO (281) 19
    PRINTF (282) 27
    SCANF (283) 28
    FOR (284) 18
    GOTO (285) 58
    SIZEOF (286) 60 61
    SWITCH (287) 13
    TYPEDEF (288) 53
    UNION (289) 57
    WHILE (290) 17 19
    FREE (291) 35
    POINTER (292) 116
    SLICE (293) 29
    SOME (294) 30
    REDUCE (295) 31
    FILTER (296) 32
    MAP (297) 33
    SORT (298) 34
    CLOSE_BRACKET (299) 119
    OPEN_BRACKET (300) 119
    CLOSE_PAREN (301) 11 12 13 17 18 19 37 38 60 61 77 112
    OPEN_PAREN (302) 11 12 13 17 18 19 37 38 60 61 77 112
    BLOCK_CLOSE (303) 10 13 37 55 56 57
    BLOCK_OPEN (304) 10 13 37 55 56 57
    DOT (305) 115
    INCREMENT (306)
    DECREMENT (307)
    ADD (308) 89
    SUB (309) 90
    MUL (310) 22 24 91
    DIV (311) 92
    BITWISE_AND (312) 94
    BITWISE_OR (313) 95
    BITWISE_NOT (314) 96
    MOD (315) 93
    LEFT_SHIFT (316) 97
    RIGHT_SHIFT (317) 98
    LT (318) 102
    GT (319) 104
    LE (320) 103
    GE (321) 105
    EQ (322) 100
    NE (323) 101
    BITWISE_XOR (324) 99
    LOGICAL_AND (325) 106
    LOGICAL_OR (326) 107
    LOGICAL_NOT (327) 74
    QUEST (328) 75
    COLON (329) 14 15 58 59 75
    SEMI_COLON (330) 7 18 19 21 22 38 49 50 51 53 55 56 57 60 61
    ASSIGN (331) 78
    ADD_ASSIGN (332) 79
    SUB_ASSIGN (333) 80
    MUL_ASSIGN (334) 81
    DIV_ASSIGN (335) 82
    MOD_ASSIGN (336) 83
    LEFT_SHIFT_ASSIGN (337) 84
    RIGHT_SHIFT_ASSIGN (338) 85
    BITWISE_AND_ASSIGN (339) 86
    BITWISE_OR_ASSIGN (340) 87
    BITWISE_XOR_ASSIGN (341) 88
    COMMA (342) 40 43 64
    INTEGER (343) 108
    DECIMAL (344) 109
    STRING (345) 54 110
    IDENTIFIER <string> (346) 21 23 25 40 42 53 55 56 57 58 59 61 64 65 114 115 116 126 127
    COMMENTS (347)


Nonterminals, with rules where they appear

    $accept (97)
        on left: 0
    program (98)
        on left: 1
        on right: 0
    stmt (99)
        on left: 2 3 4 5 6 7 9
        on right: 11 12 17 18 19 68 75
    $@1 (100)
        on left: 8
        on right: 9
    block (101)
        on left: 10
        on right: 9
    conditional (102)
        on left: 11 12 13
        on right: 2
    caselist (103)
        on left: 14 15 16
        on right: 13 14 15
    repetition (104)
        on left: 17 18 19
        on right: 3
    var (105)
        on left: 21 22
        on right: 5 62
    $@2 (106)
        on left: 20
        on right: 21
    pointer (107)
        on left: 23 24
        on right: 22 24
    funcid (108)
        on left: 25 26 27 28 29 30 31 32 33 34 35
        on right: 37 38 112
    func (109)
        on left: 37 38
        on right: 4
    $@3 (110)
        on left: 36
        on right: 37
    typelist (111)
        on left: 40 42
        on right: 40 45
    $@4 (112)
        on left: 39
        on right: 40
    $@5 (113)
        on left: 41
        on right: 42
    termlist (114)
        on left: 43 44
        on right: 43 47
    opttypelist (115)
        on left: 45 46
        on right: 37 38
    opttermlist (116)
        on left: 47 48
        on right: 112
    commands (117)
        on left: 49 50 51 53 54 55 56 57 58 59 60 61
        on right: 6
    $@6 (118)
        on left: 52
        on right: 53
    varlist (119)
        on left: 62 63
        on right: 55 57 62
    idlist (120)
        on left: 64 65
        on right: 56 64
    optexpr (121)
        on left: 66 67
        on right: 18 49
    stmts (122)
        on left: 68 69
        on right: 1 10 14 15 37 68
    expr (123)
        on left: 70 71 72 73 74 75 76 77
        on right: 7 11 12 13 17 19 66 70 71 72 73 74 75 77 119
    assign (124)
        on left: 78 79 80 81 82 83 84 85 86 87 88
        on right: 70
    op (125)
        on left: 89 90 91 92 93 94 95 96 97 98 99
        on right: 71
    rel (126)
        on left: 100 101 102 103 104 105
        on right: 72
    cond (127)
        on left: 106 107
        on right: 73
    term (128)
        on left: 108 109 110 111 112 113
        on right: 14 43 44 71 72 73 76
    attr (129)
        on left: 114 115 116
        on right: 70 113 115 116
    boolean (130)
        on left: 117 118
        on right: 111
    vector (131)
        on left: 119 120
        on right: 21 23 40 42 53 114 115 116 119
    type <typeValue> (132)
        on left: 121 122 123 124 125 126 127
        on right: 21 22 37 38 40 42 53 60
    modifier (133)
        on left: 128 129 130 131 132 133
        on right: 121 122 123 124 125


State 0

    0 $accept: . program $end

    $default  reduce using rule 69 (stmts)

    program  go to state 1
    stmts    go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: stmts .
   68 stmts: stmts . stmt

    UNSIGNED     shift, and go to state 4
    SIGNED       shift, and go to state 5
    SHORT        shift, and go to state 6
    LONG         shift, and go to state 7
    INCLUDE      shift, and go to state 8
    MAIN         shift, and go to state 9
    BREAK        shift, and go to state 10
    CONST        shift, and go to state 11
    CONTINUE     shift, and go to state 12
    IF           shift, and go to state 13
    ENUM         shift, and go to state 14
    RETURN       shift, and go to state 15
    STRUCT       shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    DO           shift, and go to state 19
    PRINTF       shift, and go to state 20
    SCANF        shift, and go to state 21
    FOR          shift, and go to state 22
    GOTO         shift, and go to state 23
    SIZEOF       shift, and go to state 24
    SWITCH       shift, and go to state 25
    TYPEDEF      shift, and go to state 26
    UNION        shift, and go to state 27
    WHILE        shift, and go to state 28
    FREE         shift, and go to state 29
    SLICE        shift, and go to state 30
    SOME         shift, and go to state 31
    REDUCE       shift, and go to state 32
    FILTER       shift, and go to state 33
    MAP          shift, and go to state 34
    SORT         shift, and go to state 35
    OPEN_PAREN   shift, and go to state 36
    LOGICAL_NOT  shift, and go to state 37
    INTEGER      shift, and go to state 38
    DECIMAL      shift, and go to state 39
    STRING       shift, and go to state 40
    IDENTIFIER   shift, and go to state 41

    $end        reduce using rule 1 (program)
    UNSIGNED    [reduce using rule 36 ($@3)]
    SIGNED      [reduce using rule 36 ($@3)]
    SHORT       [reduce using rule 36 ($@3)]
    LONG        [reduce using rule 36 ($@3)]
    CONST       [reduce using rule 36 ($@3)]
    ENUM        [reduce using rule 36 ($@3)]
    STRUCT      [reduce using rule 36 ($@3)]
    INT         reduce using rule 36 ($@3)
    INT         [reduce using rule 133 (modifier)]
    FLOAT       reduce using rule 36 ($@3)
    FLOAT       [reduce using rule 133 (modifier)]
    DOUBLE      reduce using rule 36 ($@3)
    DOUBLE      [reduce using rule 133 (modifier)]
    BOOL        reduce using rule 36 ($@3)
    BOOL        [reduce using rule 133 (modifier)]
    CHAR        reduce using rule 36 ($@3)
    CHAR        [reduce using rule 133 (modifier)]
    BLOCK_OPEN  reduce using rule 8 ($@1)
    $default    reduce using rule 36 ($@3)

    stmt         go to state 42
    $@1          go to state 43
    conditional  go to state 44
    repetition   go to state 45
    var          go to state 46
    funcid       go to state 47
    func         go to state 48
    $@3          go to state 49
    commands     go to state 50
    expr         go to state 51
    term         go to state 52
    attr         go to state 53
    boolean      go to state 54
    type         go to state 55
    modifier     go to state 56


State 3

    0 $accept: program $end .

    $default  accept


State 4

  128 modifier: UNSIGNED .

    $default  reduce using rule 128 (modifier)


State 5

  129 modifier: SIGNED .

    $default  reduce using rule 129 (modifier)


State 6

  130 modifier: SHORT .

    $default  reduce using rule 130 (modifier)


State 7

  131 modifier: LONG .

    $default  reduce using rule 131 (modifier)


State 8

   54 commands: INCLUDE . STRING

    STRING  shift, and go to state 57


State 9

   26 funcid: MAIN .

    $default  reduce using rule 26 (funcid)


State 10

   50 commands: BREAK . SEMI_COLON

    SEMI_COLON  shift, and go to state 58


State 11

  132 modifier: CONST .

    $default  reduce using rule 132 (modifier)


State 12

   51 commands: CONTINUE . SEMI_COLON

    SEMI_COLON  shift, and go to state 59


State 13

   11 conditional: IF . OPEN_PAREN expr CLOSE_PAREN stmt
   12            | IF . OPEN_PAREN expr CLOSE_PAREN stmt ELSE stmt

    OPEN_PAREN  shift, and go to state 60


State 14

   56 commands: ENUM . IDENTIFIER BLOCK_OPEN idlist BLOCK_CLOSE SEMI_COLON
  127 type: ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 61


State 15

   49 commands: RETURN . optexpr SEMI_COLON

    MAIN         shift, and go to state 9
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    PRINTF       shift, and go to state 20
    SCANF        shift, and go to state 21
    FREE         shift, and go to state 29
    SLICE        shift, and go to state 30
    SOME         shift, and go to state 31
    REDUCE       shift, and go to state 32
    FILTER       shift, and go to state 33
    MAP          shift, and go to state 34
    SORT         shift, and go to state 35
    OPEN_PAREN   shift, and go to state 36
    LOGICAL_NOT  shift, and go to state 37
    INTEGER      shift, and go to state 38
    DECIMAL      shift, and go to state 39
    STRING       shift, and go to state 40
    IDENTIFIER   shift, and go to state 62

    $default  reduce using rule 67 (optexpr)

    funcid   go to state 47
    optexpr  go to state 63
    expr     go to state 64
    term     go to state 52
    attr     go to state 53
    boolean  go to state 54


State 16

   55 commands: STRUCT . IDENTIFIER BLOCK_OPEN varlist BLOCK_CLOSE SEMI_COLON
  126 type: STRUCT . IDENTIFIER

    IDENTIFIER  shift, and go to state 65


State 17

  117 boolean: TRUE .

    $default  reduce using rule 117 (boolean)


State 18

  118 boolean: FALSE .

    $default  reduce using rule 118 (boolean)


State 19

   19 repetition: DO . stmt WHILE OPEN_PAREN expr CLOSE_PAREN SEMI_COLON

    UNSIGNED     shift, and go to state 4
    SIGNED       shift, and go to state 5
    SHORT        shift, and go to state 6
    LONG         shift, and go to state 7
    INCLUDE      shift, and go to state 8
    MAIN         shift, and go to state 9
    BREAK        shift, and go to state 10
    CONST        shift, and go to state 11
    CONTINUE     shift, and go to state 12
    IF           shift, and go to state 13
    ENUM         shift, and go to state 14
    RETURN       shift, and go to state 15
    STRUCT       shift, and go to state 16
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    DO           shift, and go to state 19
    PRINTF       shift, and go to state 20
    SCANF        shift, and go to state 21
    FOR          shift, and go to state 22
    GOTO         shift, and go to state 23
    SIZEOF       shift, and go to state 24
    SWITCH       shift, and go to state 25
    TYPEDEF      shift, and go to state 26
    UNION        shift, and go to state 27
    WHILE        shift, and go to state 28
    FREE         shift, and go to state 29
    SLICE        shift, and go to state 30
    SOME         shift, and go to state 31
    REDUCE       shift, and go to state 32
    FILTER       shift, and go to state 33
    MAP          shift, and go to state 34
    SORT         shift, and go to state 35
    OPEN_PAREN   shift, and go to state 36
    LOGICAL_NOT  shift, and go to state 37
    INTEGER      shift, and go to state 38
    DECIMAL      shift, and go to state 39
    STRING       shift, and go to state 40
    IDENTIFIER   shift, and go to state 41

    UNSIGNED    [reduce using rule 36 ($@3)]
    SIGNED      [reduce using rule 36 ($@3)]
    SHORT       [reduce using rule 36 ($@3)]
    LONG        [reduce using rule 36 ($@3)]
    CONST       [reduce using rule 36 ($@3)]
    ENUM        [reduce using rule 36 ($@3)]
    STRUCT      [reduce using rule 36 ($@3)]
    INT         reduce using rule 36 ($@3)
    INT         [reduce using rule 133 (modifier)]
    FLOAT       reduce using rule 36 ($@3)
    FLOAT       [reduce using rule 133 (modifier)]
    DOUBLE      reduce using rule 36 ($@3)
    DOUBLE      [reduce using rule 133 (modifier)]
    BOOL        reduce using rule 36 ($@3)
    BOOL        [reduce using rule 133 (modifier)]
    CHAR        reduce using rule 36 ($@3)
    CHAR        [reduce using rule 133 (modifier)]
    BLOCK_OPEN  reduce using rule 8 ($@1)
    $default    reduce using rule 36 ($@3)

    stmt         go to state 66
    $@1          go to state 43
    conditional  go to state 44
    repetition   go to state 45
    var          go to state 46
    funcid       go to state 47
    func         go to state 48
    $@3          go to state 49
    commands     go to state 50
    expr         go to state 51
    term         go to state 52
    attr         go to state 53
    boolean      go to state 54
    type         go to state 55
    modifier     go to state 56


State 20

   27 funcid: PRINTF .

    $default  reduce using rule 27 (funcid)


State 21

   28 funcid: SCANF .

    $default  reduce using rule 28 (funcid)


State 22

   18 repetition: FOR . OPEN_PAREN optexpr SEMI_COLON optexpr SEMI_COLON optexpr CLOSE_PAREN stmt

    OPEN_PAREN  shift, and go to state 67


State 23

   58 commands: GOTO . IDENTIFIER COLON

    IDENTIFIER  shift, and go to state 68


State 24

   60 commands: SIZEOF . OPEN_PAREN type CLOSE_PAREN SEMI_COLON
   61         | SIZEOF . OPEN_PAREN IDENTIFIER CLOSE_PAREN SEMI_COLON

    OPEN_PAREN  shift, and go to state 69


State 25

   13 conditional: SWITCH . OPEN_PAREN expr CLOSE_PAREN BLOCK_OPEN caselist BLOCK_CLOSE

    OPEN_PAREN  shift, and go to state 70


State 26

   53 commands: TYPEDEF . type IDENTIFIER $@6 vector SEMI_COLON

    UNSIGNED  shift, and go to state 4
    SIGNED    shift, and go to state 5
    SHORT     shift, and go to state 6
    LONG      shift, and go to state 7
    CONST     shift, and go to state 11
    ENUM      shift, and go to state 71
    STRUCT    shift, and go to state 72

    $default  reduce using rule 133 (modifier)

    type      go to state 73
    modifier  go to state 56


State 27

   57 commands: UNION . IDENTIFIER BLOCK_OPEN varlist BLOCK_CLOSE SEMI_COLON

    IDENTIFIER  shift, and go to state 74


State 28

   17 repetition: WHILE . OPEN_PAREN expr CLOSE_PAREN stmt

    OPEN_PAREN  shift, and go to state 75


State 29

   35 funcid: FREE .

    $default  reduce using rule 35 (funcid)


State 30

   29 funcid: SLICE .

    $default  reduce using rule 29 (funcid)


State 31

   30 funcid: SOME .

    $default  reduce using rule 30 (funcid)


State 32

   31 funcid: REDUCE .

    $default  reduce using rule 31 (funcid)


State 33

   32 funcid: FILTER .

    $default  reduce using rule 32 (funcid)


State 34

   33 funcid: MAP .

    $default  reduce using rule 33 (funcid)


State 35

   34 funcid: SORT .

    $default  reduce using rule 34 (funcid)


State 36

   77 expr: OPEN_PAREN . expr CLOSE_PAREN

    MAIN         shift, and go to state 9
    TRUE         shift, and go to state 17
    FALSE        shift, and go to state 18
    PRINTF       shift, and go to state 20
    SCANF        shift, and go to state 21
    FREE         shift, and go to state 29
    SLICE        shift, and go to state 30
    SOME         shift, and go to state 31
    REDUCE       shift, and go to state 32
    FILTER       shift, and go to state 33
    MAP          shift, and go to state 34
    SORT         shift, and go to state 35
    OPEN_PAREN   shift, and go to state 36
    LOGICAL_NOT  shift, and go to state 37
    INTEGER      shift, and go to state 38
    DECIMAL      shift, and go to state 39
    STRING       shift, and go to state 40
    IDENTIFIER   shift, and go to state 62

    funcid   go to state 47
    expr     go to state 76
    term     go to state 52
    attr     go to state 53
    boolean  go to state 54


State 37

   74 expr: LOGICAL_NOT . expr
